# headroom-v2

./: CMakeLists.txt  README.md
.github/workflows/: build-macos.yml
Source/: LookaheadGainEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Tests/: EngineTest.cpp
